syntax = "proto3";
package shareledger.swap;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sharering/shareledger/x/swap/types";

message Request {
  uint64 id = 1;
  string srcAddr = 2;
  string destAddr = 3;
  string srcNetwork = 4;
  string destNetwork = 5;
  cosmos.base.v1beta1.Coin amount = 6 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin fee = 7 [(gogoproto.nullable) = false];
  string status = 8;
  uint64 batchId = 9;
  repeated string txHashes = 11;
}